Fixing the flickering issue of the FAQ section

--- a/src/pages/SendINRLandingPage/index.module.scss
+++ b/src/pages/SendINRLandingPage/index.module.scss
@@ -508,12 +508,12 @@ input:focus {
   margin-top: -200px;
   animation: mymove 200s infinite;
 }
-.backgroundLeftImageSimpleStyleSectionInMobile {
-  display: none;
-  position: absolute;
-  margin-left: -516px;
-  margin-top: -245px;
-}
+// .backgroundLeftImageSimpleStyleSectionInMobile {
+//   display: none;
+//   position: absolute;
+//   margin-left: -516px;
+//   margin-top: -245px;
+// }
 .RighSideBackgroundSectionOne {
   position: absolute;
   right: -336px;
